[gd_scene load_steps=20 format=3 uid="uid://ctsxhyt1lgvc6"]

[ext_resource type="Script" path="res://possum.gd" id="1_2bks5"]
[ext_resource type="AudioStream" uid="uid://cp30wcgkyae24" path="res://sfx/water-drip-45622.mp3" id="2_dxiv0"]
[ext_resource type="Texture2D" uid="uid://cv2u8fhjpjlce" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-1.png" id="3_6ab8l"]
[ext_resource type="Texture2D" uid="uid://ernxyxe6qdq4" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-2.png" id="4_g2pn7"]
[ext_resource type="Texture2D" uid="uid://6a63ydlsn8g5" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-3.png" id="5_qe58v"]
[ext_resource type="Texture2D" uid="uid://dgpxfp2v5rse" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-4.png" id="6_3eola"]
[ext_resource type="Texture2D" uid="uid://b5eld7dw2buwo" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-5.png" id="7_f8krh"]
[ext_resource type="Texture2D" uid="uid://dyf0q8viopqcl" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/enemy-death/enemy-death-6.png" id="8_htrqo"]
[ext_resource type="Texture2D" uid="uid://b6qt5tr5oyhpn" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-1.png" id="9_eb5nq"]
[ext_resource type="Texture2D" uid="uid://b2t7avnldmwt" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-2.png" id="10_owd1o"]
[ext_resource type="Texture2D" uid="uid://137u2so2sriu" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-3.png" id="11_a8x1b"]
[ext_resource type="Texture2D" uid="uid://bjkwcdci4fanj" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-4.png" id="12_j2h12"]
[ext_resource type="Texture2D" uid="uid://cp6gnx6qo0pt6" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-5.png" id="13_yom51"]
[ext_resource type="Texture2D" uid="uid://ey5m7ifldu0j" path="res://collection/Sunny Land Collection Files/Assets/Packs/Sunnyland/sprites/opossum/opossum-6.png" id="14_d0msu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_et34w"]
radius = 146.219

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug7si"]
size = Vector2(16, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_shvaf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6ab8l")
}, {
"duration": 1.0,
"texture": ExtResource("4_g2pn7")
}, {
"duration": 1.0,
"texture": ExtResource("5_qe58v")
}, {
"duration": 1.0,
"texture": ExtResource("6_3eola")
}, {
"duration": 1.0,
"texture": ExtResource("7_f8krh")
}, {
"duration": 1.0,
"texture": ExtResource("8_htrqo")
}],
"loop": false,
"name": &"death",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_eb5nq")
}, {
"duration": 1.0,
"texture": ExtResource("10_owd1o")
}, {
"duration": 1.0,
"texture": ExtResource("11_a8x1b")
}, {
"duration": 1.0,
"texture": ExtResource("12_j2h12")
}, {
"duration": 1.0,
"texture": ExtResource("13_yom51")
}, {
"duration": 1.0,
"texture": ExtResource("14_d0msu")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_eb5nq")
}, {
"duration": 1.0,
"texture": ExtResource("10_owd1o")
}, {
"duration": 1.0,
"texture": ExtResource("11_a8x1b")
}, {
"duration": 1.0,
"texture": ExtResource("12_j2h12")
}, {
"duration": 1.0,
"texture": ExtResource("13_yom51")
}, {
"duration": 1.0,
"texture": ExtResource("14_d0msu")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2agc5"]
size = Vector2(20, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ie8u"]
size = Vector2(26.5, 12)

[node name="Possum" type="CharacterBody2D"]
script = ExtResource("1_2bks5")

[node name="PlayerDetection" type="Area2D" parent="."]
visible = false

[node name="radius" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(-2, 4)
shape = SubResource("CircleShape2D_et34w")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="squish" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(-4, 6)
shape = SubResource("RectangleShape2D_ug7si")

[node name="owsound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_dxiv0")
volume_db = -5.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_shvaf")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5, 6.5)
shape = SubResource("RectangleShape2D_2agc5")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="ow" type="CollisionShape2D" parent="PlayerCollision"]
position = Vector2(-3.75, 8)
shape = SubResource("RectangleShape2D_4ie8u")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
